--- a/src/app/modules/Header/Header.component.html
+++ b/src/app/modules/Header/Header.component.html
@@ -172,6 +172,12 @@
                         <span class="clearfix d-none d-sm-inline-block" (click)="Contactform.show()">Contact</span>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link waves-light" [routerLink]="['/homework']" mdbRippleRadius>                       
+                        <i class="fa fa-sign-in"></i>
+                        <span class="clearfix d-none d-sm-inline-block">Homework</span>
+                    </a>
+                </li>
                
                 <li class="nav-item">
                     <a class="nav-link waves-light" (click)="Loginform.show()" mdbRippleRadius>                       
